add new exercises

--- a/clase-7/margin-and-padding/index.html
+++ b/clase-7/margin-and-padding/index.html
@@ -54,7 +54,17 @@
       rerum, magnam repellat animi minima vitae doloremque distinctio aliquam
       suscipit.
     </p>
-
+    <div>
+      <p class="border-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-radius-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-radius-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      <p class="border-radius-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, perferendis.</p>
+      
+    </div>
     <!-- <script src="codigo.js"></script> -->
     <script src="codigo.js"></script>
   </body>
