add clase 20 and examples of vue

--- a/clase-19/ejemplos-vue3-1/intro-vue.html
+++ b/clase-19/ejemplos-vue3-1/intro-vue.html
@@ -33,7 +33,7 @@
 
         <!-- Directiva v-once -->
         <h3>{{otro_titulo}}</h3>
-        <button v-on:click='otro_titulo = "Tiulo Cambiado"'>Cambiar</button>
+        <button v-on:click="otro_titulo = 'Tiulo Cambiado'">Cambiar</button>
 
     </div>
     
