--- a/clase-19/index.html
+++ b/clase-19/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta author="Lucas Rodriguez">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,7 +14,10 @@
         <p>Repasando el curso de {{vue}}</p>
     </div>
     <div id="app1">
-        Vue fue desarrollado por: <span v-text="dev"></span> en el año: <span v-text="anio"></span>
+        <div v-html="titulo"></div>
+    </div>
+    <div id="app2">
+        <a v-bind:href="url" v-bind:class="claseCSS">Ir a Google</a>
     </div>
 <script src="https://unpkg.com/vue@3"></script>
 <script type="module" src="script.js"></script>
